css/style.css
/* ... */
.orange-text {
    color: #ed6c1d;
}

.grey-text {
    color: #595959;
}

p{
    color: white;
    font-size: 0.8rem;
}

.btn {
    background-color: #fa9a55;
    color: white;
    border: 1px solid #ed6c1d;
    margin-bottom: 20px;
}
.btn:hover{
    color: #595959;
}

.btn-grey{
    background-color:#7c7a7a;
    color: white;
    border: 1px solid #595959;
    margin-top: 20px;
    margin-bottom: 20px;
}
.btn-grey:hover{
    color: #ed6c1d;
}

img {
    width: 100%;
}

/* navbar styling */

/* sidebar (mobile) */
.sidebar {
    visibility: hidden;
    opacity: 0;
    position: fixed;
    top: 0;
    left: 0; 			
    background: #595959;
    width: 100%;
    height: 100%;
    z-index: 5;
    transition: visibility 0s, opacity 0.5s linear;
}

.sidebar-show {
    visibility: visible;
    opacity: 1;
    width: 100%;
}
  
ul {
    margin: 0;
    padding: 0;
}
  

ul.sidebar-nav {
    padding-top: 20px;
}

ul.sidebar-nav li a{
    padding: 10px 20px;
    border-width: 0 2px 2px 2px;
    border-style: solid;
    border-color: transparent;
    display: block;
    text-decoration: none;
}
ul.sidebar-nav li a:active,
ul.sidebar-nav li a:hover,
ul.sidebar-nav li a.active {
    border-color: transparent;
    background-color: transparent;
}

ul.sidebar-nav li a {
    color: #ffffff;
    background: transparent;
}

ul.sidebar-nav li a:hover {
    text-decoration: none;
}
 
/* 'burger' */
.sidebarBtn {
    display: block;
    position: absolute;
    z-index: 2;
    top: 0;
    right: 0;
    width: 35px;
    height: 35px;
    box-sizing: border-box;
    cursor: pointer;
    background:none;
    border-width: 0px 0px 2px 2px;
    border-style: solid;
    border-color: #ed6c1d;
    background-color: #fa9a55;
    outline: none;
    padding-left: 5px;
}

.sidebarBtn:focus {
    outline: none;
}

.sidebarBtn span {
    display: block;
    width: 25px;
    height: 1.5px;
    background: white;
    position: absolute;
    top: 17px;
    transition: .3s;
    -o-transition: .3s;
}

.sidebarBtn span:before {
    content: '';
    position: absolute;
    top: -8px;
    left: 0;
    width: 100%;
    height: 1.5px;
    background: white;
    transition: .3s;
    -webkit-transition: .3s;
    -o-transition: .3s;
}

.sidebarBtn span:after {
    content: '';
    position: absolute;
    top: 8px;
    left: 0;
    width: 100%;
    height: 1.5px;
    background: white;
    transition: .3s;
    -webkit-transition: .3s;
    -o-transition: .3s;
}

.sidebarBtn.toggle{
    transition: 0.3s;
    -webkit-transition: .3s;
    -o-transition: .3s;
}

.sidebarBtn.toggle span {
    background: transparent;
}

.sidebarBtn.toggle span:before {
    top: 0;
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    -o-transform: rotate(45deg);
}

.sidebarBtn.toggle span:after {
    top: 0;
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    -o-transform: rotate(-45deg);
}
/* end of 'burger' */
/* end of navbar styling */

/* HOME PAGE */

.logo{
    box-sizing: border-box;
    height: 100px;
    width: 100px;
    padding: 7px 7px 7px 7px;   
    position:absolute;
    top: 0;
    left: 50%;
    transform: translate(-50%);
    z-index: 0;
    background-color: white;
}

.logo img {
    height: 100%;
    width: 100%;
}

.home-main {
    margin-top: 70px;
}

.stripes-container {
    height: 20px;
    width: 100%;
    position: absolute;
    top: 100px;
    left: 0;
    z-index: 0;
    background-color: transparent;
}

.stripes-stripes {
    display: inline-block;
    height: 100%;
    width: 100%;
    transform: skew(0deg);
    background: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(20%, white), color-stop(20%, #595959), color-stop(40%, #595959), color-stop(40%, white), color-stop(60%, white), color-stop(60%, #ed6c1d), color-stop(80%, #ed6c1d), color-stop(80%, white), to(white));
    background: linear-gradient(white 0%, white 20%, #595959 20%, #595959 40%, white 40%, white 60%, #ed6c1d 60%, #ed6c1d 80%, white 80%, white 100%)
}

.stripes-text {
    display: none;
}

.home-main-div {
    margin-top: 120px;
}

.home-main-image{
    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/placeholder.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    height: 200px;
    width: 100%;
}

.home-main-text-holder{
    height: 600px;
    width: 100%;
}

.home-main-text {
    background-color: #595959;
}

.home-lower-container {
    height: 500px;
    border-style: solid;
    border-width: 15px;
    border-color: #ed6c1d;
    background-color: #f19664;
}

.home-lower-container:before {
    content: "";
    position: absolute;
    top: -18px;
    left: 50%;
    transform: translate(-50%);
    width: 0; 
    height: 0; 
    border-left: 40px solid transparent;
    border-right: 40px solid transparent;
    border-top: 40px solid #595959;
}

.home-lower-img img{
    height: 250px;
}

/* ABOUT PAGE */
.about-container {
    margin-top:120px;
}
.about-col {
    height: fit-content;
    padding-top: 1rem;
    padding-bottom: 1rem;
}

.about-row> :nth-child(2),
.about-row> :last-child{
    background-color:#fa9a55;
    border: 10px solid #ed6c1d;
    padding-top: 50px;
}
.about-row> :nth-child(3){
    padding-top: 50px;
}

/* div triangles */
.about-row> :not(:last-child)::before,
.about-row> :not(:last-child)::after{
    content: "";
    position: absolute;
    right: 50%;
    transform: translate(50%);
    width: 0;
    height: 0;
    z-index: 2;
}

/* all children of about-row */
.about-row >*::before {
    bottom: -49px;
    border-left: 50px solid transparent;
    border-right: 50px solid transparent;
    border-top: 50px solid white;
    border-bottom:0px;
}
.about-row >*::after {
    bottom: -38px;
    border-left: 40px solid transparent;
    border-right: 40px solid transparent;   
}
/* ... */

